# pcsx2

./: .gitignore  PCSX2_suite.sln  README.md
Omega Red/: .gitignore  Golden Phi.sln  Omega Red.sln
Omega Red/Android/OmegaRed/app/src/main/cpp/: CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/BiosControl/: AndroidInterface.cpp  BiosControl.cpp  BiosControl.h  CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/CPU/x86/: aVUzerorec.S  sVU_zerorec_stub.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/Emitters/: CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/Emitters/arm64v8aEmitter/: CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/Emitters/arm64v8aEmitter/emitter/: tools.h
Omega Red/Android/OmegaRed/app/src/main/cpp/Emitters/arm64v8aEmitter/include/: Arm64Emitter.h  Common.h  CommonTypes.h  Pcsx2Defs.h  PrecompiledHeader.h  cpudetect_internal.h  emitter.h  instructions.h  internal.h  intrin.h  legacy_instructions.h  tools.h  types.h
Omega Red/Android/OmegaRed/app/src/main/cpp/Emitters/arm64v8aEmitter/src/: Arm64Emitter.cpp  MemoryUtil.cpp  arm64v8aEmitter.cpp  cpudetect.cpp  legacy.cpp  simd.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/Emitters/arm64v8aEmitter/src/implement/: groups.cpp  jmp.cpp  movs.cpp  xAddressVoid.cpp  xIndirectVoid.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/Emitters/x86emitter/: CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/Extend/: Dialogs.h  LnxThreads.cpp  ModuleInterface.h  Pcsx2Defs.h  Redefine.cpp  Redefine.h  Util.cpp  direct.h  excpt.h  io.h  svnrev.h  tchar.h  x86intrin_stub.h
Omega Red/Android/OmegaRed/app/src/main/cpp/Extend/gtk/: gtk.h
Omega Red/Android/OmegaRed/app/src/main/cpp/Extend/simd/: simd_intrin.h
Omega Red/Android/OmegaRed/app/src/main/cpp/Framework/: CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/MemoryManager/: CMakeLists.txt  MemoryManager.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/: CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/AudioRenderer/: AndroidInterface.cpp  CMakeLists.txt  SndOut_Android.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/CDVD/: AndroidInterface.cpp  CMakeLists.txt  InputIsoFile.cpp  LnxFlatFileReader.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/DEV9/: AndroidInterface.cpp  CMakeLists.txt  DEV9.cpp  DEV9.h
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/FW/: AndroidInterface.cpp  CMakeLists.txt  FW.cpp  FW.h
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/MemoryCard/: AndroidInterface.cpp  CMakeLists.txt  MC.h  MemoryCard.cpp  MemoryCard.h
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/Pad/: AndroidInterface.cpp  CMakeLists.txt  Pad.cpp  PadInclude.h  Stub.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/USB/: AndroidInterface.cpp  CMakeLists.txt  USB.cpp  USB.h
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/VideoRenderer/: AndroidInterface.cpp  CMakeLists.txt  Interface.cpp  VideoRenderer.cpp  VideoRenderer.h  VideoRendererControl.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/Modules/VideoRenderer/GSnull/: CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/PCSX2Lib/: AndroidHostSys.cpp  AndroidInterface.cpp  CMakeLists.txt  ext.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/PCSX2Lib/x86emitter/: x86_intrin.h
Omega Red/Android/OmegaRed/app/src/main/cpp/PugiXML/: CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/SIMDEmitter/: CMakeLists.txt  SIMDEmitter.cpp  SIMDEmitter.h  simd_soft.cpp
Omega Red/Android/OmegaRed/app/src/main/cpp/Utilities/: CMakeLists.txt
Omega Red/Android/OmegaRed/app/src/main/cpp/libaio/: CMakeLists.txt
Omega Red/Golden Phi/: App.config  App.xaml  App.xaml.cs  Golden Phi.csproj  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  packages.config
Omega Red/MediaCapture/: AudioCaptureProcessor.cs  Capture.cs  ImageCaptureProcessor.cs  MediaCapture.csproj  VideoTextureCaptureProcessor.cs  packages.config
Omega Red/MediaStream/: AudioCaptureProcessor.cs  ImageCaptureProcessor.cs  MediaStream.csproj  OffScreenStream.cs  RTSPStream.cs  RtmpClient.cs  RtmpStream.cs  RtspServer.cs  Stream.cs  VideoTextureCaptureProcessor.cs  packages.config
Omega Red/Omega Red/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OffScreenWindow.xaml  OffScreenWindow.xaml.cs  Omega Red.csproj  Program.cs  app.manifest  packages.config
Omega Red/Omega Red Launcher/: Omega Red Launcher.cpp  Omega Red Launcher.rc  Omega Red Launcher.vcxproj  Omega Red Launcher.vcxproj.filters  Resource.h
Omega Red/PCSX-Reloaded/: .gitignore
Omega Red/PCSX-Reloaded/plugins/dfsound/: Filemap.txt  Makefile.am  Makefile.in  alsa.c  cfg.c  changelog.txt  debug.c  dma.c  dsoundoss.h  externals.h  freeze.c  oss.c  registers.c  regs.h  resource.h  reverb.c  reverb.h  spu.c  spuPeopsSound.def  stdafx.h  xa.c
Omega Red/PCSX-Reloaded/plugins/dfsound/spucfg-0.1df/: main.c
Omega Red/PCSX-Reloaded/plugins/dfxvideo/: Makefile.am  Makefile.in  cfg.h  changelog.txt  draw.c  externals.h  gpu.c  menu.c  prim.c  soft.c  zn.c
Omega Red/PCSX2Emul/: EmulInfo.cs  EmulInstance.cs  PCSX2Emul.csproj
Omega Red/PCSX2Lib/: App.h  ExportDef.h  Extend.cpp  Interface.h  PCSX2Lib.def  PCSX2Lib.manifest  PCSX2Lib.vcxproj  PCSX2Lib.vcxproj.filters  PCSX2Lib_API.h  ReadMe.txt  i18n.h
Omega Red/PCSXEmul/: EmulInstance.cs  PCSXEmul.csproj  packages.config
Omega Red/PPSSPPEmul/: EmulInfo.cs  EmulInstance.cs  PPSSPPEmul.csproj
Omega Red/RTMP/: Interface.cpp  RTMP.def  RTMP.vcxproj
Omega Red/ppsspp/: .gitignore
common/include/: PS2Eext.h  Pcsx2Defs.h
common/vsprops/: CodeGen_Debug.props
debian-packager/: create_built_tarball.sh
pcsx2/: Config.h  Memory.h  PrecompiledHeader.h  System.cpp
pcsx2/Recording/: InputRecording.cpp
pcsx2/System/: SysThreads.h
pcsx2/gui/: AppInit.cpp  ConsoleLogger.h
pcsx2/x86/: BaseblockEx.cpp  BaseblockEx.h  iCOP0.cpp  iCore.cpp  iCore.h  iFPU.cpp  iFPUd.cpp  iMMI.cpp  iR3000A.cpp  iR3000Atables.cpp  iR5900.h  iR5900Misc.cpp  microVU.cpp  microVU_Branch.inl  (+5 more)
(+950 files in other folders)
